# Blaze-Engine

./: .gitignore  CMakeLists.txt  Engine.cpp  conanfile.txt  engine.cpp
assets/Shaders/: basicShader.fs
src/Graphics/: Mesh.cpp  Mesh.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h
src/Util/: FileLoader.h
src/core/: Window.cpp  Window.h
